--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
+<distributionManagement>
+    <repository>
+        <id>github</id>
+        <name>GitHub MyProject Maven Packages</name>
+        <url>https://maven.pkg.github.com/Shruthi-123456/CICDtest</url>
+    </repository>
+</distributionManagement>
 
 	<pluginRepositories>
 		<pluginRepository>
